2022-09-29T16:28:44Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3152985329
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 189 355 / 210 389
* notice: next accum: outdated-unq outdated-all / unq all: 189 355 / 210 388
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -1 -3 / 1 1
* notice: removed / changed dates: [] / [2022-09-15]

2022-09-29T08:26:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149758354
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 189 355 / 210 390
* notice: next accum: outdated-unq outdated-all / unq all: 189 355 / 210 389
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-15 2022-09-29]

2022-09-29T01:53:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3148117454
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 187 352 / 209 387
* notice: next accum: outdated-unq outdated-all / unq all: 189 355 / 210 390
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-14] / [2022-09-28]

2022-09-28T16:30:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3145263257
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 187 352 / 209 388
* notice: next accum: outdated-unq outdated-all / unq all: 187 352 / 209 387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-14]

2022-09-28T08:26:08Z: