@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-29T16:28:44Z",
-  "count_outdated" : 355,
-  "uniques_outdated" : 189,
-  "count" : 388,
-  "uniques" : 210,
+  "timestamp" : "2022-09-30T02:12:12Z",
+  "count_outdated" : 359,
+  "uniques_outdated" : 191,
+  "count" : 392,
+  "uniques" : 211,
   "clones" : [
-    {
-      "timestamp": "2022-09-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 1,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
