@@ -1,3 +1,11 @@
+2022-09-30T02:12:12Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3155846471
+* notice: last 14d: unq all: 2 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 189 355 / 210 388
+* notice: next accum: outdated-unq outdated-all / unq all: 191 359 / 211 392
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-15] / [2022-09-29]
+
 2022-09-29T16:28:44Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3152985329
 * notice: last 14d: unq all: 2 33
